--- a/frontend/src/Toast.css
+++ b/frontend/src/Toast.css
@@ -1,6 +1,7 @@
 .error-toast {
   position: fixed;
   top: 10px;
+  left: 10px;
   background-color: #f44336;
   color: #fff; 
   padding-left: 50px;
@@ -14,7 +15,8 @@
 
 .happy-toast {
   position: fixed;
-  top: 10;
+  top: 10px;
+  left: 10px;
   background-color: #438436;
   color: #fff; 
   padding-left: 50px;
@@ -22,7 +24,7 @@
   padding-bottom: 10px;
   border-radius: 4px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  z-index: 1000; 
+  z-index: 1000;
   animation: slideInRight 0.5s, fadeOut 5s 2s forwards;
 }
 
