--- a/frontend/src/Toast.css
+++ b/frontend/src/Toast.css
@@ -1,7 +1,7 @@
 .error-toast {
   position: fixed;
   top: 10px;
-  left: 10px;
+  right: 10px;
   background-color: #f44336;
   color: #fff; 
   padding-left: 50px;
@@ -16,7 +16,7 @@
 .happy-toast {
   position: fixed;
   top: 10px;
-  left: 10px;
+  right: 10px;
   background-color: #438436;
   color: #fff; 
   padding-left: 50px;
