--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,8 @@ html, body {
   padding: 0;
   background: linear-gradient(to right, rgba(255, 175, 189, .5), rgba(195, 195, 160, .5));
   background-attachment: fixed;
-  min-height: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
 }
 
 @keyframes modalEntry {
