--- a/frontend/src/GamePage.css
+++ b/frontend/src/GamePage.css
@@ -1,3 +1,8 @@
+.full-page-container {
+    min-width: 100vw;
+    min-height: 100vh;
+}
+
 .game-container {
     display: flex;
     flex-direction: column;
@@ -14,6 +19,7 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border: 2px solid #f0f0f0;
     background-color: #f0f0f0;
+    background-color: rgba(255, 255, 0, 0.3);
 }
 
 .fade-background {
